src/mflibrary/mfFind/mfFindParser.output
Grammar

    0 $accept: Criterion $end

    1 Criterion: Expression

    2 Or: "&"

    3 Expression: Term
    4           | Expression Or Term

    5 And: "|"

    6 Term: Factor
    7     | Term And Factor

    8 Factor: String
    9       | "=" String
   10       | SubExpression

   11 SubExpression: "(" Expression ")"

   12 SingleString: "single quoted_string"
   13             | "double quoted_string"

   14 String: SingleString
   15       | String SingleString


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "|" (258) 5
    "&" (259) 2
    "=" (260) 9
    "(" (261) 11
    ")" (262) 11
    "single quoted_string" <std::string> (263) 12
    "double quoted_string" <std::string> (264) 13


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    Criterion <std::string> (11)
        on left: 1
        on right: 0
    Or (12)
        on left: 2
        on right: 4
    Expression <std::string> (13)
        on left: 3 4
        on right: 1 4 11
    And (14)
        on left: 5
        on right: 7
    Term <std::string> (15)
        on left: 6 7
        on right: 3 4 7
    Factor <std::string> (16)
        on left: 8 9 10
        on right: 6 7
    SubExpression <std::string> (17)
        on left: 11
        on right: 10
    SingleString <std::string> (18)
        on left: 12 13
        on right: 14 15
    String <std::string> (19)
        on left: 14 15
        on right: 8 9 15


State 0

    0 $accept: • Criterion $end

    "="                     shift, and go to state 1
    "("                     shift, and go to state 2
    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    Criterion      go to state 5
    Expression     go to state 6
    Term           go to state 7
    Factor         go to state 8
    SubExpression  go to state 9
    SingleString   go to state 10
    String         go to state 11


State 1

    9 Factor: "=" • String

    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    SingleString  go to state 10
    String        go to state 12


State 2

   11 SubExpression: "(" • Expression ")"

    "="                     shift, and go to state 1
    "("                     shift, and go to state 2
    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    Expression     go to state 13
    Term           go to state 7
    Factor         go to state 8
    SubExpression  go to state 9
    SingleString   go to state 10
    String         go to state 11


State 3

   12 SingleString: "single quoted_string" •

    $default  reduce using rule 12 (SingleString)


State 4

   13 SingleString: "double quoted_string" •

    $default  reduce using rule 13 (SingleString)


State 5

    0 $accept: Criterion • $end

    $end  shift, and go to state 14


State 6

    1 Criterion: Expression •
    4 Expression: Expression • Or Term

    "&"  shift, and go to state 15

    $default  reduce using rule 1 (Criterion)

    Or  go to state 16


State 7

    3 Expression: Term •
    7 Term: Term • And Factor

    "|"  shift, and go to state 17

    $default  reduce using rule 3 (Expression)

    And  go to state 18


State 8

    6 Term: Factor •

    $default  reduce using rule 6 (Term)


State 9

   10 Factor: SubExpression •

    $default  reduce using rule 10 (Factor)


State 10

   14 String: SingleString •

    $default  reduce using rule 14 (String)


State 11

    8 Factor: String •
   15 String: String • SingleString

    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    $default  reduce using rule 8 (Factor)

    SingleString  go to state 19


State 12

    9 Factor: "=" String •
   15 String: String • SingleString

    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    $default  reduce using rule 9 (Factor)

    SingleString  go to state 19


State 13

    4 Expression: Expression • Or Term
   11 SubExpression: "(" Expression • ")"

    "&"  shift, and go to state 15
    ")"  shift, and go to state 20

    Or  go to state 16


State 14

    0 $accept: Criterion $end •

    $default  accept


State 15

    2 Or: "&" •

    $default  reduce using rule 2 (Or)


State 16

    4 Expression: Expression Or • Term

    "="                     shift, and go to state 1
    "("                     shift, and go to state 2
    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    Term           go to state 21
    Factor         go to state 8
    SubExpression  go to state 9
    SingleString   go to state 10
    String         go to state 11


State 17

    5 And: "|" •

    $default  reduce using rule 5 (And)


State 18

    7 Term: Term And • Factor

    "="                     shift, and go to state 1
    "("                     shift, and go to state 2
    "single quoted_string"  shift, and go to state 3
    "double quoted_string"  shift, and go to state 4

    Factor         go to state 22
    SubExpression  go to state 9
    SingleString   go to state 10
    String         go to state 11


State 19

   15 String: String SingleString •

    $default  reduce using rule 15 (String)


State 20

   11 SubExpression: "(" Expression ")" •

    $default  reduce using rule 11 (SubExpression)


State 21

    4 Expression: Expression Or Term •
    7 Term: Term • And Factor

    "|"  shift, and go to state 17

    $default  reduce using rule 4 (Expression)

    And  go to state 18


State 22

    7 Term: Term And Factor •

    $default  reduce using rule 7 (Term)
